@@ -102,9 +102,10 @@ KEY ShftAlt;c;switch_mode;4;
 #
 # Show/hide the bar
 KEY Super;b;toggle_bar;
-#
 # Shortcut for xterm
 KEY Super;t;spawn;xtermcmd;
+# Focus the last focused window
+KEY Super;Tab;last_win;
 #
 # Shortcut to exit the window manager
 KEY CtrlAlt;q;quit;
