@@ -406,6 +406,9 @@ running window manager is updateable.
 .I last_desktop
 change to the last focused desktop.
 
+.I last_win
+focus the last focused window.
+
 .I more_master [-1 - 1]
 add or remove a window to or from the master area.
 
